Add tests for updating team names